fix(theme): fix article action spacing

--- a/src/assets/styles/core/_variables.scss
+++ b/src/assets/styles/core/_variables.scss
@@ -74,9 +74,8 @@ $hgap: calc(4vw + 1rem) !default;
 $vgap: calc(2vw + 1rem) !default;
 $canvas: 50vw !default;
 
-$cell-sm: 14rem !default;
+$cell-sm: 12rem !default;
 $cell-md: 16rem !default;
-$cell-rg: 25vw !default;
 
 $gfx-xs: 1rem !default;
 $gfx-sm: 1.5rem !default;
